[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node.gd" type="Script" id=1]

[node name="Node" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Container" type="Container" parent="." index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.5
margin_top = -144.0
margin_right = 200.5
margin_bottom = 144.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="TitleLabel" type="Label" parent="Container" index="0"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -85.5
margin_top = 10.0
margin_right = 84.5
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Try Http Request functions"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin" ]

[node name="CallGetButton" type="Button" parent="Container" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 50.0
margin_right = 190.0
margin_bottom = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Get"
flat = false
align = 1
_sections_unfolded = [ "Margin" ]

[node name="CallGetWithIdButton" type="Button" parent="Container" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 210.0
margin_top = 50.0
margin_right = 400.0
margin_bottom = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Get (parameter: string)"
flat = false
align = 1
_sections_unfolded = [ "Margin" ]

[node name="CallPostButton" type="Button" parent="Container" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 110.0
margin_right = 190.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Post (parameter: string)"
flat = false
align = 1
_sections_unfolded = [ "Margin" ]

[node name="CallPostWithObjectButton" type="Button" parent="Container" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 210.0
margin_top = 110.0
margin_right = 400.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Post (parameter: object)"
flat = false
align = 1
_sections_unfolded = [ "Margin" ]

[node name="CallPutButton" type="Button" parent="Container" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 170.0
margin_right = 190.0
margin_bottom = 210.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Put"
flat = false
align = 1
_sections_unfolded = [ "Margin" ]

[node name="CallDeleteButton" type="Button" parent="Container" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 210.0
margin_top = 170.0
margin_right = 400.0
margin_bottom = 210.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Delete"
flat = false
align = 1
_sections_unfolded = [ "Margin" ]

[node name="HTTPRequest" type="HTTPRequest" parent="Container" index="7"]

download_file = ""
use_threads = false
body_size_limit = -1
max_redirects = 8

[node name="Label" type="Label" parent="Container" index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 233.0
margin_right = 66.0
margin_bottom = 247.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Response:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin" ]

[node name="ResponseLabel" type="Label" parent="Container" index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 100.0
margin_top = 233.0
margin_right = 105.0
margin_bottom = 247.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "-"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin" ]

[connection signal="pressed" from="Container/CallGetButton" to="." method="_on_CallGetButton_pressed"]

[connection signal="pressed" from="Container/CallGetWithIdButton" to="." method="_on_CallGetWithIdButton_pressed"]

[connection signal="pressed" from="Container/CallPostButton" to="." method="_on_CallPostButton_pressed"]

[connection signal="pressed" from="Container/CallPostWithObjectButton" to="." method="_on_CallPostWithObjectButton_pressed"]

[connection signal="pressed" from="Container/CallPutButton" to="." method="_on_CallPutButton_pressed"]

[connection signal="pressed" from="Container/CallDeleteButton" to="." method="_on_CallDeleteButton_pressed"]

[connection signal="request_completed" from="Container/HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]


